style(): use correct dark mode css class

--- a/skins/complifi.scss
+++ b/skins/complifi.scss
@@ -9,7 +9,7 @@
   --block-bg: #f5f5f7;
 }
 
-.dark-mode .complifi {
+.complifi-dark-mode {
   --primary-color: #4aa1ff;
   --bg-color: #05142c;
   --text-color: #cccccc;
