--- a/skins/shapeshift.scss
+++ b/skins/shapeshift.scss
@@ -9,7 +9,7 @@
   --block-bg: #fff;
 }
 
-.dark-mode .shapeshift {
+.shapeshift-dark-mode {
   --primary-color: rgb(51, 104, 228);
   --bg-color: #0a111e;
   --text-color: rgb(84, 100, 128);
