--- a/skins/uniswap.scss
+++ b/skins/uniswap.scss
@@ -9,7 +9,7 @@
   --block-bg: transparent;
 }
 
-.dark-mode .uniswap {
+.uniswap-dark-mode {
   --primary-color: #2172e5;
   --bg-color: #212429;
   --text-color: #c2c5ca;
